--- a/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code.vcxproj
+++ b/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code.vcxproj
@@ -128,6 +128,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AdrianG Assessment 4 Code.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Room.cpp" />
+    <ClCompile Include="Spell.cpp" />
+    <ClCompile Include="String_Utility.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="Spell.h" />
+    <ClInclude Include="String_Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
