added functions to view item descriptions and states
added functions to view items in a room and what state they're in.

Added classes for Lamps Item and Box Of Donuts.

also added a way to randomize the state of an item is in when you enter a room

--- a/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code.vcxproj
+++ b/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code/AdrianG Assessment 4 Code.vcxproj
@@ -128,16 +128,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AdrianG Assessment 4 Code.cpp" />
+    <ClCompile Include="Box_of_Donuts.cpp" />
+    <ClCompile Include="Cat.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Lamp.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Spell.cpp" />
     <ClCompile Include="String_Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Box_of_Donuts.h" />
+    <ClInclude Include="Cat.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="Lamp.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="Spell.h" />
