--- a/AdrianG Assessment 4 Code Ver.2/AdrianG Assessment 4 Code Ver.2/AdrianG Assessment 4 Code Ver.2.vcxproj
+++ b/AdrianG Assessment 4 Code Ver.2/AdrianG Assessment 4 Code Ver.2/AdrianG Assessment 4 Code Ver.2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f87a62d7-56e8-43c2-bea2-036b5f1a3af7}</ProjectGuid>
-    <RootNamespace>AdrianGAssessment4Code</RootNamespace>
+    <ProjectGuid>{2c7c3fa1-942d-4b9e-9e4d-2dc6f9b60219}</ProjectGuid>
+    <RootNamespace>AdrianGAssessment4CodeVer2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AdrianG Assessment 4 Code.cpp" />
+    <ClCompile Include="AdrianG Assessment 4 Code Ver.2.cpp" />
     <ClCompile Include="Box_of_Donuts.cpp" />
     <ClCompile Include="Cat.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -136,7 +136,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Spell.cpp" />
-    <ClCompile Include="String_Utility.cpp" />
+    <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box_of_Donuts.h" />
@@ -147,7 +147,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="Spell.h" />
-    <ClInclude Include="String_Utility.h" />
+    <ClInclude Include="String.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
